--- a/frontend/src/components/GradientBackgroundWrapper.module.css
+++ b/frontend/src/components/GradientBackgroundWrapper.module.css
@@ -1,5 +1,5 @@
 .pageWrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -11,5 +11,28 @@
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+.backgroundContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.noiseOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('../assets/noise-ae0ab1628dee87591c6f6d3740.png');
+  background-repeat: repeat;
+  opacity: 0.4;
+  z-index: -1;
+  pointer-events: none;
 }
