--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -202,6 +202,12 @@
 }
 
 /* Responsive Design */
+@media (max-width: 1512px) {
+  .navbar {
+    padding: 1.25rem 6rem;
+  }
+}
+
 @media (max-width: 1024px) {
   .navbar {
     padding: 1.25rem 3rem;
