connection setup v1 implementation
first iteration of connection setup where the user is redirected after signing up and prompted to connect their notion account to our app

--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -204,7 +204,7 @@
 /* Responsive Design */
 @media (max-width: 1512px) {
   .navbar {
-    padding: 1.25rem 6rem;
+    padding: 1.25rem rem;
   }
 }
 
